Initial commit of some Collections
* Add collection support for ObservableList, Set and Map
* Add initial ReadOnlyProperty ser. support, but it is inherently broken
  due to design constraint requirements.

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
     <module>parameter-names</module>
     <module>datatypes</module>
     <module>datetime</module>
+    <module>javafx</module>
   </modules>
 
   <url>https://github.com/FasterXML/jackson-modules-java8</url>
